[gd_scene load_steps=8 format=3 uid="uid://033x5ei5sxvi"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_rndma"]
[ext_resource type="Shader" path="res://scenes/planet_screen/mainmenubg.gdshader" id="2_jbop5"]
[ext_resource type="Theme" uid="uid://ymjmqc6cyd1i" path="res://scenes/main_menu/main_menu_theme.tres" id="3_1m83w"]
[ext_resource type="AudioStream" uid="uid://dxp5qh5lblwbp" path="res://res/menuthemeloopable.ogg" id="4_qutdk"]
[ext_resource type="AudioStream" uid="uid://cnhgjjvcvr00g" path="res://res/drumfill.ogg" id="5_oykl3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8ix8b"]
shader = ExtResource("2_jbop5")

[sub_resource type="LabelSettings" id="LabelSettings_thm06"]
font_size = 100

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rndma")

[node name="Background" type="ColorRect" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_8ix8b")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -14.0
offset_right = 46.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_1m83w")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Cosmic Landlord"
label_settings = SubResource("LabelSettings_thm06")
horizontal_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="PlayButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Play"

[node name="QuitButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Quit Game"

[node name="MenuTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qutdk")
autoplay = true

[node name="DrumFill" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_oykl3")
volume_db = 1.0

[node name="FadeRect" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="VBoxContainer/ButtonsContainer/PlayButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="finished" from="DrumFill" to="." method="_on_drum_fill_finished"]
